--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -2,7 +2,7 @@ header {
   min-width: 160px;
   height: 100vh;
   background-color: white;
-  box-shadow: 2px 0px 9px #00000080;
+  box-shadow: 2px 0px 9px var(--disabled-200);
   overflow: hidden;
 
   .navigations {
@@ -30,8 +30,7 @@ header {
     .icon {
       min-width: 60px;
       min-height: 60px;
-      background-color: #00d0f1;
-      mask-image: url(./../../assets/icons/favorite.svg);
+      background-color: var(--brand-color-1);
       mask-size: cover;
       mask-position: center;
     }
@@ -44,9 +43,13 @@ header {
         min-width: 125px;
         min-height: 125px;
         margin: auto;
-        background-image: url(./../../assets/logo.svg);
-        background-size: cover;
-        background-position: center;
+        mask-image: url(./../../assets/logo.svg);
+        mask-size: cover;
+        mask-position: center;
+        -webkit-mask-image: url(./../../assets/logo.svg);
+        -webkit-mask-size: cover;
+        -webkit-mask-position: center;
+        background: var(--brand-color-1);
       }
     }
   }
