--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import url(./assets/styles/_colors.scss);
-
 * {
   padding: 0px;
   margin: 0px;
@@ -9,12 +7,12 @@
 body {
   font-family: sans-serif;
   color: #4c4c4c;
-  background: var(--background);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 100vh;
-  width: 100%;
+     background: rgb(233 233 233);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100%;
 }
 
 div#root {
@@ -31,12 +29,12 @@ div#root {
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: var(--disabled-200);
+  background-color: #d6dee1;
   border-radius: 10px;
   border: 3px solid transparent;
   background-clip: content-box;
 }
 
 *::-webkit-scrollbar-thumb:hover {
-  background-color: var(--disabled-200);
+  background-color: #a8bbbf;
 }
