--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -24,6 +24,7 @@
       box-shadow: 5px 0px 6px var(--disabled-100);
       position: relative;
       max-width: 220px;
+      position: relative;
 
       .average {
         width: 50px;
