criando servico de login

--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -9,5 +9,5 @@
   --disabled-500: #8a8989;
   --disabled-600: #747272;
   --background: #e9e8e8;
-  --background-2: #f7f7f7;
+  --background-2: #e8e8e8;
 }
