--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -26,6 +26,12 @@
       max-width: 220px;
       position: relative;
 
+      .menu {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+      }
+
       .average {
         width: 50px;
         height: 50px;
