--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,17 @@
   text-align: center;
 }
 
+.loader {
+      position: fixed !important;
+    margin: auto;
+    width: 100%;
+    height: 100vh;
+    background: #00000069;
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
