--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -16,6 +16,10 @@
     cursor: pointer;
   }
 
+  &:not(.default)::before {
+    content: unset;
+  }
+
   &:not(.open) .dropdown {
     height: 0px;
     padding: 0px;
