--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -33,3 +33,27 @@
   > span.ant-select-selection-item[title="Português"]::before {
   background-image: url(./../icons/brazil-icon.png);
 }
+
+button {
+  background-color: white;
+  position: relative;
+  padding: 0px 11px;
+  border: 1px solid #d9d9d9;
+  min-height: 32px;
+  font-size: 14px;
+  border-radius: 6px;
+  transition: all 0.2s;
+  color: var(--text-primary);
+}
+
+button:not([disabled]) {
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: var(--disabled-100);
+}
+
+a.no-link {
+  color: unset;
+}
