--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -42,3 +42,11 @@
     }
   }
 }
+
+.hide-header {
+  display: flex;
+  justify-content: flex-end;
+  padding: 21px;
+  width: 100%;
+  position: absolute;
+}
