--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -10,4 +10,10 @@
   --disabled-600: #747272;
   --background: #e9e8e8;
   --background-2: #e8e8e8;
+  --danger: rgba(255, 0, 0, 1);
+  --danger-100: rgb(255, 180, 180);
+  --danger-200: rgb(255, 127, 127);
+  --danger-300: rgb(255, 112, 112);
+  --danger-400: rgb(255, 88, 88);
+  --danger-500: rgb(255, 65, 65);
 }
