--- a/src/components/Panda/Panda.scss
+++ b/src/components/Panda/Panda.scss
@@ -1,6 +1,32 @@
 .panda-container {
   position: relative;
 
+  &.hide,
+  &.down {
+    .face > .face-container > .eyes > .eye-detail > .eye {
+      top: 25px;
+    }
+  }
+
+  &.hide {
+    .arm {
+      width: 125px;
+    }
+    .content {
+      &::before {
+        left: 47px;
+        top: -87px;
+        transform: rotate(-53deg);
+      }
+
+      &::after {
+        right: 44px;
+        top: -88px;
+        transform: rotate(237deg);
+      }
+    }
+  }
+
   .face {
     width: 200px;
     width: 200px;
@@ -18,7 +44,7 @@
       border-radius: 200px;
       top: -7px;
       left: -6px;
-      z-index: 999;
+      z-index: 9;
     }
 
     &::after {
@@ -31,7 +57,7 @@
       border-radius: 200px;
       top: -7px;
       left: 133px;
-      z-index: 999;
+      z-index: 9;
     }
 
     .face-container {
@@ -42,7 +68,7 @@
       justify-content: center;
       align-items: center;
       position: relative;
-      z-index: 1000;
+      z-index: 10;
       border: 2px solid black;
       border-radius: 7.5em 7.5em 5.62em 5.62em;
       background: white;
@@ -65,6 +91,7 @@
             position: absolute;
             top: 9px;
             left: 22px;
+            transition: all 0.5s;
           }
         }
 
@@ -121,13 +148,16 @@
   .arm {
     content: "";
     width: 63px;
-    height: 50px;
+    height: 75px;
     position: absolute;
     background-color: black;
     border-radius: 8px;
     border-top-right-radius: 50px;
     border-bottom-right-radius: 50px;
     top: 25%;
+    border: 2px solid white;
+    transition: all 0.6s;
+    z-index: 10;
   }
 
   .content {
@@ -156,8 +186,8 @@
     display: flex;
     justify-content: space-around;
     .feet {
-      width: 50px;
-      height: 50px;
+      width: 75px;
+      height: 65px;
       background-color: black;
       border-radius: 30px 30px 10px 10px;
       position: relative;
@@ -166,35 +196,35 @@
       justify-content: center;
 
       .base {
-        width: 10px;
-        height: 10px;
+        width: 15px;
+        height: 15px;
         background-color: white;
         border-radius: 20px;
         position: relative;
-        top: 8px;
+        top: 6px;
 
         &::before {
           content: "";
           @extend .base;
           position: absolute;
-          left: 15px;
+          left: 18px;
         }
 
         &::after {
           content: "";
           @extend .base;
           position: absolute;
-          right: 15px;
+          right: 18px;
         }
       }
 
       .main-base {
-        width: 25px;
-        height: 23px;
+        width: 50px;
+        height: 30px;
         background-color: white;
-        top: 22px;
+        top: 27px;
         position: absolute;
-        right: 12px;
+        right: 13px;
         border-top-right-radius: 15px;
         border-top-left-radius: 15px;
         border-bottom-left-radius: 5px;
