finalizando login, melhorando layout e estilizando tela de detalhamento de filme

--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -1,5 +1,5 @@
 :root {
-  --brand-color-1: #00d0f1;
+  --brand-color-1: #727272;
   --text-color: #726c6c;
   --disabled: #9d9d9d;
   --disabled-100: #d7d7d7;
@@ -16,4 +16,16 @@
   --danger-300: rgb(255, 112, 112);
   --danger-400: rgb(255, 88, 88);
   --danger-500: rgb(255, 65, 65);
+  --success: rgb(0, 130, 0);
+  --success-100: rgb(90, 130, 90);
+  --success-200: rgb(70, 130, 70);
+  --success-300: rgb(40, 130, 40);
+  --success-400: rgb(20, 130, 20);
+  --success-500: rgb(00, 130, 00);
+  --dark: rgb(19, 19, 19);
+  --dark-100: rgb(34, 34, 34);
+  --dark-200: rgb(56, 56, 56);
+  --dark-300: rgb(79, 79, 79);
+  --dark-400: rgb(99, 99, 99);
+  --dark-500: rgb(114, 114, 114);
 }
