--- a/src/routes.scss
+++ b/src/routes.scss
@@ -11,8 +11,9 @@ main {
     background-color: #f7f7f7;
     border-radius: 9px;
     box-shadow: 2px 0px 10px #a1a1a1;
-    padding: 20px;
     max-height: 100vh;
     overflow: auto;
+    position: relative;
+
   }
 }
