criando funcionalidade de pegar cor predominando de umagem com outro dominio [testes] e melhoria de visualizacoes

--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -57,6 +57,12 @@ button {
   color: var(--text-primary);
 }
 
+button[btn-icon]::before {
+  content: '';
+  background-image: var(attr(btn-icon));
+
+}
+
 button.success {
   background-color: var(--success-100);
   border: 1px solid var(--success-100);
