--- a/src/pages/movie/Movie.scss
+++ b/src/pages/movie/Movie.scss
@@ -22,12 +22,47 @@
                display: flex;
                flex-direction: column;
                gap: 30px;
-               margin-top: 40px;
 
-               h1>span {
-                    color: var(--disabled-200);
-                    font-weight: 100;
-                    font-size: 24px;
+               .also-known {
+                    font-size: 13px;
+                    color: var(--disabled-100);
+               }
+
+               h1 {
+                    span {
+                         color: var(--disabled-200);
+                         font-weight: 100;
+                         font-size: 24px;
+
+                    }
+
+                    .infos {
+
+                         * {
+                              position: relative;
+                              top: -15px;
+                              font-size: 14px;
+                              color: white;
+                         }
+
+                         .tags {
+                              &::before {
+                                   content: ' » ';
+                                   margin: 8px;
+                              }
+
+                              &::after {
+                                   content: ' « ';
+                                   margin: 8px;
+                              }
+                         }
+                    }
+
+                    .tagline {
+                         font-size: 13px;
+                         font-weight: bolder;
+                         color: var(--disabled-100);
+                    }
                }
 
                p {
@@ -42,13 +77,19 @@
                left: 0;
                top: 0;
                position: absolute;
-               background: #000000bd;
+               background-color: var(--average-color);
+               opacity: 0.7;
+               filter: brightness(0.5);
           }
      }
 
      .movie-header {
           img {
                border-radius: 8px;
+          }
+
+          .movie-info {
+               padding: 10px;
 
           }
      }
