--- a/src/pages/movie/Movie.scss
+++ b/src/pages/movie/Movie.scss
@@ -5,14 +5,15 @@
 
      .backdrop {
           width: 100%;
-          height: 600px;
           padding: 20px;
           display: flex;
           background-position: center;
           background-repeat: no-repeat;
-          position: absolute;
+          position: relative;
           color: white;
           gap: 20px;
+          box-shadow: 0px 0px 10px #00000080;
+          margin-bottom: 20px;
 
           * {
                z-index: 1;
@@ -68,7 +69,43 @@
                p {
                     font-size: 1.3em;
                }
+
+               .header-movie-data {
+                    .buttons {
+                         display: flex;
+                         gap: 20px;
+
+                         .button-wrapper {
+                              background-color: var(--dark-300);
+                              border-radius: 100px;
+                              width: 50px;
+                              height: 50px;
+                              cursor: pointer;
+
+                              &:hover {
+                                   background-color: var(--dark-200);
+
+                              }
+
+                              .button {
+                                   width: 100%;
+                                   height: 100%;
+                                   background-color: white;
+                                   mask-repeat: no-repeat;
+                                   mask-position: center;
+                                   mask-size: 20px;
+                              }
+                         }
+                    }
+               }
+
+               .average {
+                    position: absolute;
+                    transform: scale(1.2);
+                    right: 20px;
+               }
           }
+
 
           &::before {
                content: '';
@@ -78,8 +115,8 @@
                top: 0;
                position: absolute;
                background-color: var(--average-color);
-               opacity: 0.7;
-               filter: brightness(0.5);
+               opacity: 0.8;
+               filter: brightness(0.3);
           }
      }
 
