--- a/src/pages/movie/Movie.scss
+++ b/src/pages/movie/Movie.scss
@@ -130,4 +130,82 @@
 
           }
      }
+
+     .company-productions {
+          padding: 20px;
+          border-radius: 6px;
+
+          h3 {
+               font-size: 1.4em;
+          }
+
+          .people-producers {
+               display: flex;
+               overflow: auto;
+               gap: 20px;
+               margin-top: 15px;
+               padding: 15px;
+
+               .cast-people {
+                    padding: 10px;
+                    border: 1px solid var(--disabled-300);
+                    border-radius: 6px;
+                    box-shadow: 0px 0px 10px #00000033;
+
+                    figure {
+                         :first-child {
+                              border-radius: 6px;
+                              background-color: var(--disabled-200);
+
+                              &.photo-placeholder {
+                                   width: 138px;
+                                   height: 175px;
+                                   position: relative;
+
+                                   .icon {
+                                        width: 100%;
+                                        height: 100%;
+                                        background-color: var(--disabled-500);
+                                        mask-size: contain;
+                                        mask-repeat: no-repeat;
+                                        mask-position: center;
+                                   }
+                              }
+                         }
+                    }
+
+                    .details {
+                         display: flex;
+                         flex-direction: column;
+                         gap: 5px;
+                         margin-top: 10px;
+
+                         strong {
+                              color: var(--disabled-500);
+                         }
+
+                         .name {
+                              font-weight: bolder;
+                              color: var(--text-color);
+                         }
+                    }
+               }
+
+               .show-more {
+                    min-width: 160px;
+                    min-height: 243px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    strong {
+                         cursor: pointer;
+
+                         &:hover {
+                              color: var(--disabled);
+                         }
+                    }
+               }
+          }
+     }
 }
