--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -61,6 +61,19 @@ button {
   position: relative;
 }
 
+.pill {
+  padding: 2px 10px;
+  width: fit-content;
+  background-color: var(--disabled);
+  border-radius: 10000px;
+  white-space: nowrap;
+
+}
+
+.pill.success {
+  background-color: var(--success);
+}
+
 *[atom-tooltip]:hover::before {
   content: attr(atom-tooltip);
 }
