finalizando tela de detalhes do filme

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import url(./assets/styles/_colors.scss);
 @import url(./assets/styles/_global.scss);
+@import './assets/styles/breakpoints';
 
 * {
   padding: 0px;
