--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -19,15 +19,15 @@ input {
   min-height: 40px;
   color: var(--tex-primary);
   transition: border 0.5s;
-}
 
-input.touched.invalid {
-  border: 1px solid var(--danger-500);
-}
+  &.touched.invalid {
+    border: 1px solid var(--danger-500);
+  }
 
-input:focus-visible {
-  outline: unset;
-  border: 1px solid var(--disabled-500);
+  &:focus-visible {
+    outline: unset;
+    border: 1px solid var(--disabled-500);
+  }
 }
 
 #root>main>div.top-content>div>div>span.ant-select-selection-item::before {
@@ -55,10 +55,77 @@ button {
   border-radius: 6px;
   transition: all 0.2s;
   color: var(--text-primary);
+
+  &[btn-icon]::before {
+    content: '';
+    background-image: var(attr(btn-icon));
+
+  }
+
+  &.success {
+    background-color: var(--success-100);
+    border: 1px solid var(--success-100);
+    color: white;
+  }
+
+  &.brand {
+    background-color: var(--brand-color-1);
+    border: 1px solid var(--brand-color-1);
+    color: white;
+  }
+
+  &.dark {
+    background-color: var(--dark-100);
+    border: 1px solid var(--dark-100);
+    color: white;
+  }
+
+  &.dark-500 {
+    background-color: var(--dark-500);
+    border: 1px solid var(--dark-500);
+    color: white;
+  }
+
+  &:not([disabled]) {
+    cursor: pointer;
+  }
+
+  &:hover {
+    background-color: var(--disabled-100);
+  }
 }
 
 *[atom-tooltip] {
   position: relative;
+
+  &:hover::before {
+    content: attr(atom-tooltip);
+  }
+
+  &:hover:after {
+    content: '';
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: var(--brand-color-1);
+    transform: rotate(45deg);
+    border-radius: 0px 0px 3px 0px;
+    top: -25%;
+    left: 40%;
+  }
+
+  &::before {
+    white-space: nowrap;
+    position: absolute;
+    color: white;
+    top: -35px;
+    z-index: 1096;
+    text-align: center;
+    background-color: var(--brand-color-1);
+    padding: 5px;
+    border-radius: 5px;
+
+  }
 }
 
 .pill {
@@ -68,77 +135,10 @@ button {
   border-radius: 10000px;
   white-space: nowrap;
 
-}
+  &.success {
+    background-color: var(--success);
+  }
 
-.pill.success {
-  background-color: var(--success);
-}
-
-*[atom-tooltip]:hover::before {
-  content: attr(atom-tooltip);
-}
-
-*[atom-tooltip]:hover:after {
-  content: '';
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  background-color: var(--brand-color-1);
-  transform: rotate(45deg);
-  border-radius: 0px 0px 3px 0px;
-  top: -25%;
-  left: 40%;
-}
-
-*[atom-tooltip]::before {
-  white-space: nowrap;
-  position: absolute;
-  color: white;
-  top: -35px;
-  z-index: 1096;
-  text-align: center;
-  background-color: var(--brand-color-1);
-  padding: 5px;
-  border-radius: 5px;
-
-}
-
-button[btn-icon]::before {
-  content: '';
-  background-image: var(attr(btn-icon));
-
-}
-
-button.success {
-  background-color: var(--success-100);
-  border: 1px solid var(--success-100);
-  color: white;
-}
-
-button.brand {
-  background-color: var(--brand-color-1);
-  border: 1px solid var(--brand-color-1);
-  color: white;
-}
-
-button.dark {
-  background-color: var(--dark-100);
-  border: 1px solid var(--dark-100);
-  color: white;
-}
-
-button.dark-500 {
-  background-color: var(--dark-500);
-  border: 1px solid var(--dark-500);
-  color: white;
-}
-
-button:not([disabled]) {
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: var(--disabled-100);
 }
 
 a.no-link {
