--- a/src/components/SideNav/SideNav.scss
+++ b/src/components/SideNav/SideNav.scss
@@ -1,3 +1,5 @@
+@import './../../assets/styles/breakpoints';
+
 .sidenav-content {
   min-width: 120px;
   height: 100vh;
@@ -58,4 +60,13 @@
       }
     }
   }
+}
+
+.bottom-bar {
+  position: absolute;
+  bottom: 0px;
+  height: 80px;
+  background-color: white;
+  width: 100%;
+  z-index: 1050;
 }
