--- a/src/routes.scss
+++ b/src/routes.scss
@@ -1,7 +1,13 @@
+@import './assets/styles/breakpoints';
+
 main {
   width: calc(100% - 120px);
   display: flex;
   flex-direction: column;
+
+  @media screen and (max-width: $mobile-bkp) {
+    width: 100%;
+  }
 
   .page-content {
     margin: auto auto;
