--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -62,9 +62,27 @@
     }
   }
 
+
   &::before {
     content: '';
     left: -9px;
+    position: absolute;
+    top: 90%;
+    height: 20px;
+    width: 20px;
+    border: 9px solid white;
+    border-right: 0;
+    border-bottom: 0;
+    border-radius: 50px;
+    border-bottom-left-radius: 0px;
+    border-top-right-radius: 0;
+    border-top-left-radius: 37px;
+  }
+
+  &::after {
+    content: '';
+    transform: rotate(90deg);
+    right: -9px;
     position: absolute;
     top: 90%;
     height: 20px;
