--- a/src/routes.scss
+++ b/src/routes.scss
@@ -25,7 +25,7 @@ main {
     @media screen and (max-width: $mobile-bkp) {
       margin: 15px auto;
       width: calc(100% - 30px);
-      height: 75%;
+      height: calc(100% - 215px);
     }
 
   }
