--- a/src/components/SideNav/SideNav.scss
+++ b/src/components/SideNav/SideNav.scss
@@ -91,13 +91,47 @@
       justify-content: center;
       background-color: white;
       transition: all 0.5s;
+      top: 0px;
 
-      * {
-        transition: all 0.5s;
+      .details {
+        position: absolute;
+        left: 2px;
 
+        &::before {
+          content: '';
+          height: 29px;
+          position: absolute;
+          top: -7%;
+          left: -30px;
+          width: 23px;
+          border-color: var(--background-2);
+          transform: rotate(96deg);
+          transition: all 0.5s;
+        }
+
+        &::after {
+          content: '';
+          position: absolute;
+          top: -6%;
+          left: 45px;
+          height: 29px;
+          width: 28px;
+          border-color: var(--background-2);
+          transform: rotate(90deg);
+          transition: all 0.5s;
+        }
       }
 
       &.active {
+        top: -30px;
+
+        &::before {
+          opacity: 1;
+          background-color: var(--background-2);
+          height: 43px;
+          top: 14px;
+        }
+
         a {
           .item {
             top: 8px;
@@ -110,17 +144,9 @@
         }
 
         .details {
-          position: relative;
-
           &::before {
-            content: '';
-            left: -36px;
-            position: absolute;
-            transform: rotate(90deg);
-            top: -7%;
-            height: 29px;
-            width: 23px;
-            border: 7px solid var(--background-2);
+            border-width: 7px;
+            border-style: solid;
             border-right: 0;
             border-bottom: 0;
             border-radius: 50px;
@@ -130,15 +156,9 @@
           }
 
           &::after {
-            content: '';
-            left: 45px;
-            position: absolute;
-            transform: rotate(96deg);
-            top: -6%;
-            height: 29px;
-            width: 28px;
-            border: 7px solid var(--background-2);
+            border-width: 7px;
             border-right: 0;
+            border-style: solid;
             border-top: 0;
             border-radius: 0px;
             border-top-right-radius: 0;
@@ -148,21 +168,16 @@
       }
 
       &::before {
+        content: '';
         width: 70px;
-        height: 43px;
+        height: 0px;
         position: absolute;
-        background-color: var(--background-2);
+        background-color: white;
+        opacity: 0;
         z-index: -1;
-        top: 14px;
+        top: 0px;
         border-radius: 0px 0px 35px 35px;
-      }
-
-      &.active {
-        top: -30px;
-
-        &::before {
-          content: '';
-        }
+        transition: all 0.5s;
       }
 
       a {
@@ -173,6 +188,11 @@
 
         &::before {
           content: '';
+        }
+
+        .name {
+          font-weight: bold;
+          color: var(--text-color);
         }
 
         .item {
