--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,10 +1,47 @@
+@import './../../assets/styles/breakpoints';
+
 .page-list-content {
   width: 100%;
   display: flex;
   gap: 20px;
 
+  @media screen and (max-width: $mobile-bkp) {
+    flex-direction: column;
+
+    .filters {
+      min-height: 90px;
+
+      &::before {
+        content: unset !important;
+      }
+
+      &:after {
+        content: '';
+        position: absolute;
+        width: 90%;
+        height: 1px;
+        background-color: var(--disabled-200);
+        bottom: -11px;
+        left: -2%;
+        right: 0;
+        margin: 0 auto;
+      }
+    }
+  }
+
   .filters {
     min-width: 300px;
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      height: 95%;
+      width: 1px;
+      top: 2%;
+      background-color: var(--disabled-200);
+      right: -10px;
+    }
   }
 
   .catalog {
