--- a/src/components/Filters/Filters.scss
+++ b/src/components/Filters/Filters.scss
@@ -3,4 +3,44 @@
      flex-direction: column;
      width: 100%;
      padding: 20px;
+
+     .filters-wrapper {
+          display: flex;
+          flex-direction: column;
+          gap: 20px;
+          margin-top: 20px;
+
+          .search>input {
+               margin: 0px;
+          }
+
+          .ant-select {
+               max-width: unset;
+          }
+
+          .genres {
+               display: flex;
+               flex-wrap: wrap;
+               gap: 5px;
+
+               .genre {
+                    border: 1px solid var(--disabled-100);
+                    padding: 5px;
+                    border-radius: 5px;
+                    cursor: pointer;
+                    color: var(--text-color);
+
+                    &.active {
+                         border: 1px solid var(---brand-color-1);
+                         color: white;
+                         background-color: var(--brand-color-1);
+                    }
+
+                    &:hover {
+                         color: var(--text-color);
+                         background-color: var(--disabled-100);
+                    }
+               }
+          }
+     }
 }
