--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -9,7 +9,7 @@
     flex-direction: column;
 
     .filters {
-      min-height: 90px;
+      min-height: unset;
 
       &::before {
         content: unset !important;
