--- a/src/components/Filters/Filters.scss
+++ b/src/components/Filters/Filters.scss
@@ -14,6 +14,16 @@
                margin: 0px;
           }
 
+          .select-container {
+               display: flex;
+               flex-direction: column;
+               gap: 5px;
+
+               label {
+                    font-size: 14px;
+               }
+          }
+
           .ant-select {
                max-width: unset;
           }
