--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -3,7 +3,10 @@
 .page-list-content {
   width: 100%;
   display: flex;
+  max-width: 1360px;
   gap: 20px;
+  margin: auto;
+  height: 100%;
 
   @media screen and (max-width: $mobile-bkp) {
     flex-direction: column;
@@ -30,7 +33,7 @@
   }
 
   .filters {
-    min-width: 300px;
+    max-width: 300px;
     position: relative;
 
     &::before {
@@ -49,10 +52,11 @@
     flex-wrap: wrap;
     gap: 25px;
     justify-content: space-between;
-    max-width: 1200px;
-    margin: 0 auto;
+    max-width: 1020px;
+    margin: 15px auto;
     overflow: auto;
     padding: 20px;
+    height: calc(100% - 30px);
 
     .card {
       border-radius: 15px;
