--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,7 +1,35 @@
 @import './colors.scss';
 @import './button.scss';
+@import './input.scss';
 
 html {
   background-color: var(--black);
-  overflow: hidden;
+  
+  *::selection {
+    filter: invert(1);
+    background-color: #00FFFF;
+  }
+  
 }
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #d6d6d6 #ffffff;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #ffffff00;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #d6d6d6;
+    border-radius: 16px;
+    border: 2px solid #ffffff00;
+  }
