--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -8,7 +8,8 @@ html {
 
   *::selection {
     filter: invert(1);
-    background-color: #00FFFF;
+    background-color: var(--brand-color-1);
+    color: white;
   }
 
 }
