--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -7,6 +7,29 @@
     height: 720px;
     position: relative;
     background-image: url(./../../assets/bg-overlay.svg);
+    display: flex;
+    align-items: center;
+
+    .content {
+      position: relative;
+      color: white;
+      z-index: 1;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 0px 5%;
+
+      label {
+        font-size: 24px;
+      }
+
+      h3 {
+        font-size: 54px;
+        max-width: 690px;
+      }
+    }
 
     &::after {
       content: "";
@@ -17,11 +40,11 @@
       top: 0;
       bottom: 0;
       position: absolute;
-      box-shadow: 0px 24px 250px 129px inset;
+      box-shadow: -60px -15px 380px 213px inset;
     }
 
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       height: 100%;
       width: 1920px;
