--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -58,4 +58,23 @@
       background-repeat: no-repeat;
     }
   }
+
+  .content-movie-wrapper {
+    .tests {
+      display: flex;
+      padding: 10px 20px;
+      gap: 40px;
+      overflow: auto;
+
+      .card {
+        min-width: 150px;
+        min-height: 200px;
+        border-radius: 8px;
+        background-color: transparent;
+        display: flex;
+        justify-content: center;
+        align-items: end;
+      }
+    }
+  }
 }
