--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -8,8 +8,13 @@
   background-repeat: no-repeat;
   background-position: center;
   position: relative;
-  transition: all 0.1s;
+  transition: all 0.5s !important;
   cursor: pointer;
+
+  &.details {
+    margin: 0px 10px;
+    background-color: var(--black-300);
+  }
 
   &:hover {
     transform: scale(1.05);
