--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -6,6 +6,7 @@
   align-items: end;
   background-size: contain;
   background-repeat: no-repeat;
+  overflow: hidden;
   background-position: center;
   position: relative;
   transition: all 0.5s !important;
