--- a/src/components/TvShow/TvShowPopular.scss
+++ b/src/components/TvShow/TvShowPopular.scss
@@ -1,1 +1,40 @@
+.details {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: space-evenly;
+  height: 180px;
+  > * {
+    position: relative;
+    z-index: 1;
+  }
 
+  .backdrop {
+    position: absolute;
+    z-index: 0;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    filter: blur(2px);
+
+    &::after {
+      content: '';
+      position: absolute;
+      background-color: #0000009c;
+      opacity: 0.4;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  .overview {
+    padding: 10px;
+    overflow: auto;
+    max-height: 90px;
+    font-size: 13px;
+  }
+}
